updated TaskExtension.java